# rs_ornament

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: controllers.rs  main.rs  texture.wgsl  util.rs
console-app/: Cargo.toml
console-app/src/: main.rs
examples/: Cargo.toml
examples/models/: xyzrgb_statuette.ply
examples/src/: lib.rs
load/: Cargo.toml
load/src/: assimp.rs  lib.rs  obj.rs
ornament/: Cargo.toml
ornament/src/: bvh.rs  compute.rs  gpu_structs.rs  lib.rs  math.rs  util.rs
ornament/src/shaders/: bvh.wgsl  hitrecord.wgsl  material.wgsl  pathtracer.wgsl  random.wgsl  states.wgsl
util/: Cargo.toml
util/src/: lib.rs
window-app/: Cargo.toml
window-app/src/: app.rs  controllers.rs  main.rs
