[package]
name = "examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
rand = "0.8.5"
[target.'cfg(windows)'.dependencies]
load = { path = "../load" }
ornament = { path = "../ornament" }