[package]
name = "load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
ornament = { path = "../ornament" }
obj-rs = "0.7.1"
[target.'cfg(windows)'.dependencies]
russimp = { version = "2.0.5", features = ["prebuilt"] }