[package]
name = "ornament"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.16"
bytemuck = { version = "1.12", features = [ "derive" ] }
rand = "0.8.5"
cgmath = "0.18"
futures-intrusive = "^0.5"
strum = "0.25"
strum_macros = "0.25"